<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_more_info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/foreground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:tag="fragment_more"
    tools:context="com.example.owner.skymood.fragments.MoreInfoFragment">

    <ProgressBar
        android:id="@+id/fragment_more_info_view_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/fragment_more_info_tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:shadowColor="@color/veryDarkGrey"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_more_info_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_real_feel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_condition"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_max"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_min"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_uv_index"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_wind_speed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_visibility"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_sunrise"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_sunset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_moon"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_phase_of_moon"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_moon_age"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_more_info_tv_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_real_feel_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_condition_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_uv_index_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_winds_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_visibility_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_preasure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/more_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_moon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_phase_of_moon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

                <TextView
                    android:id="@+id/fragment_more_info_tv_moon_age_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_more_info_text_size" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
